src/test/ui/error-codes/E0424.stderr
error[E0424]: expected value, found module `self`
  --> $DIR/E0424.rs:7:9
   |
LL | /     fn foo() {
LL | |         self.bar();
   | |         ^^^^ `self` value is a keyword only available in methods with a `self` parameter
LL | |     }
   | |_____- this function doesn't have a `self` parameter

error[E0424]: expected unit struct, unit variant or constant, found module `self`
  --> $DIR/E0424.rs:12:9
   |
LL | / fn main () {
LL | |     let self = "self";
   | |         ^^^^ `self` value is a keyword and may not be bound to variables or shadowed
LL | | }
   | |_- this function doesn't have a `self` parameter

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0424`.
